fixed list alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,9 +31,8 @@ body {
   background: darkseagreen;
   /*background: #1c1c1c;*/
   color: #e4d9ff;
-}
+}    
 
-        
 ul {
   list-style-type: none;
   margin: 0;
@@ -52,15 +51,15 @@ li {
 li a {
   display: block;
   text-align: center;
-  padding: 14px 16px;
+  padding: 8px 0px;
   text-decoration: none;
   color: #e4d9ff;
 }
 
-
 a:visited {
 color: #52528c;
 }
+
 /*--------------------------------------------------------------sidebar styles */
 .sidebar {
   position: fixed;
@@ -76,7 +75,7 @@ color: #52528c;
 }
 
 .sidebar.active {
-  width: 278px;
+  width: 240px;
 }
 
 .sidebar .logo_details .logo {
@@ -120,7 +119,7 @@ color: #52528c;
 }
 
 .sidebar.active #btn {
-  left:90%;
+  left:85%;
 }
           
 .sidebar ul{
@@ -132,7 +131,7 @@ color: #52528c;
   list-style: none;
   height: 56px;
   width: 100%;
-  margin: 0 5px;
+
   line-height:30px;
 }
 
@@ -173,6 +172,7 @@ color: #52528c;
   text-decoration: none;
   border-radius:12px;
   transition: all 0.4s ease;
+  white-space: nowrap;
 }  
 
 .sidebar ul li a:hover  {  
@@ -209,8 +209,6 @@ color: #52528c;
   padding: 10px 6px;
   height: 60px;
 }
-
-
 
 .profile_content .profile .profile_details{
   display:flex;
